# MarketPulse

./: .gitignore  CV.py  Detailed Presenttion.pptx  README.md  Rules  changelog.md  context_summary.md  master_development_plan.md  mkt_pulse.md  mkt_pulse_updated.md  next_day_plan.md  pdf_extractor.py  project_structure.txt  project_structure_Day5.txt  pyproject.toml  requirements.in  requirements.txt  update requirements.txt
00_Daywise_Guide/: Day1.md  Day_dL.md
02_test/: find_framework.py  framework_test_clean.py
03_docs/: Day7_Review.md  complete_day6.py  day1_complete_summary.md  day3_complete_summary.md  day6_completion_summary.md  day_2_complete_summary.md  personal_trading_plan.md  phase1_day8_cleanup_report.md
data/: marketpulse.db
integration/: phase1_day8_pipeline.py
scripts/: changelog.md  check_missing_components.py  cleanup_project_structure.py  day6_integration_test.py  day7_complete_system_test.py  day7_performance_optimizer.py  day7_session_complete.py  fix_encoding_issues.py  fix_specific_validation_issues.py  next_day_plan.md  repair_system_issues.py  run_day7.sh
scripts/database_migration/: postgresql_migration_plan.py
src/ai_trading/: __init__.py  ai_confluence_scorer.py  ai_document_processor.py  ai_fundamental_analyzer.py  ai_optimizer.py  (+17 more)
test/: comprehensive_day1_to_day8_validator.py  comprehensive_test.py  framework_test_simple.py  key_test_updated.py  phase1_day8_validation.py  quick_test_day3.py  simple_phase1_day8_test.py  test_day2_risk_system.py  test_day2_risk_system_fixed.py  test_phase1_day9_fixed.py  test_realtime_system.py
(+4 files in other folders)
